// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accounts 1`] = `
Array [
  Object {
    "accountNumber": "1",
    "bic": "GENODE00TES",
    "blz": "12345678",
    "iban": "DE111234567800000001",
    "subAccount": "",
  },
  Object {
    "accountNumber": "2",
    "bic": "GENODE00TES",
    "blz": "12345678",
    "iban": "DE111234567800000002",
    "subAccount": "",
  },
]
`;

exports[`accounts 2`] = `
Array [
  "HNHBK:1:3+000000000352+300+0+1'HNVSK:998:3+PIN:1+998+1+1::0+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@194@HNSHK:2:4+PIN:1+999+5499999+1+1+1::0+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKIDN:3:2+280:12345678+test1+0+1'HKVVB:4:3+0+0+0+fints+0.1'HKSYN:5:3+0'HNSHA:6:2+5499999++12345''HNHBS:7:1+1'",
  "HNHBK:1:3+000000000369+300+DIA_10000002+2'HNVSK:998:3+PIN:2+998+1+1::DDDA10000000000000000000000A+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@173@HNSHK:2:4+PIN:2+942+5499999+1+1+1::DDDA10000000000000000000000A+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKEND:3:1+DIA_10000002'HNSHA:4:2+5499999++12345''HNHBS:5:1+2'",
  "HNHBK:1:3+000000000340+300+0+1'HNVSK:998:3+PIN:2+998+1+1::0+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@182@HNSHK:2:4+PIN:2+942+5499999+1+1+1::0+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKIDN:3:2+280:12345678+test1+0+1'HKVVB:4:3+0+0+0+fints+0.1'HNSHA:5:2+5499999++12345''HNHBS:6:1+1'",
  "HNHBK:1:3+000000000357+300+DIA_10000003+2'HNVSK:998:3+PIN:2+998+1+1::DDDA10000000000000000000000A+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@161@HNSHK:2:4+PIN:2+942+5499999+1+1+1::DDDA10000000000000000000000A+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKSPA:3:1+'HNSHA:4:2+5499999++12345''HNHBS:5:1+2'",
  "HNHBK:1:3+000000000369+300+DIA_10000003+3'HNVSK:998:3+PIN:2+998+1+1::DDDA10000000000000000000000A+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@173@HNSHK:2:4+PIN:2+942+5499999+1+1+1::DDDA10000000000000000000000A+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKEND:3:1+DIA_10000003'HNSHA:4:2+5499999++12345''HNHBS:5:1+3'",
]
`;

exports[`balance 1`] = `
Object {
  "account": Object {
    "accountNumber": "2",
    "bic": "GENODE00TES",
    "blz": "12346789",
    "iban": "DE111234567800000002",
    "subAccount": "",
  },
  "availableBalance": 104.36,
  "bookedBalance": 4.36,
  "creditLimit": 100,
  "currency": "EUR",
  "pendingBalance": 0,
  "productName": "Normalsparen",
}
`;

exports[`balance 2`] = `
Array [
  "HNHBK:1:3+000000000352+300+0+1'HNVSK:998:3+PIN:1+998+1+1::0+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@194@HNSHK:2:4+PIN:1+999+5499999+1+1+1::0+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKIDN:3:2+280:12345678+test1+0+1'HKVVB:4:3+0+0+0+fints+0.1'HKSYN:5:3+0'HNSHA:6:2+5499999++12345''HNHBS:7:1+1'",
  "HNHBK:1:3+000000000369+300+DIA_10000000+2'HNVSK:998:3+PIN:2+998+1+1::DDDA10000000000000000000000A+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@173@HNSHK:2:4+PIN:2+942+5499999+1+1+1::DDDA10000000000000000000000A+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKEND:3:1+DIA_10000000'HNSHA:4:2+5499999++12345''HNHBS:5:1+2'",
  "HNHBK:1:3+000000000340+300+0+1'HNVSK:998:3+PIN:2+998+1+1::0+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@182@HNSHK:2:4+PIN:2+942+5499999+1+1+1::0+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKIDN:3:2+280:12345678+test1+0+1'HKVVB:4:3+0+0+0+fints+0.1'HNSHA:5:2+5499999++12345''HNHBS:6:1+1'",
  "HNHBK:1:3+000000000409+300+DIA_10000001+2'HNVSK:998:3+PIN:2+998+1+1::DDDA10000000000000000000000A+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@213@HNSHK:2:4+PIN:2+942+5499999+1+1+1::DDDA10000000000000000000000A+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKSAL:3:7+DE111234567800000002:GENODE00TES:2::280:12346789+N++'HNSHA:4:2+5499999++12345''HNHBS:5:1+2'",
  "HNHBK:1:3+000000000369+300+DIA_10000001+3'HNVSK:998:3+PIN:2+998+1+1::DDDA10000000000000000000000A+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@173@HNSHK:2:4+PIN:2+942+5499999+1+1+1::DDDA10000000000000000000000A+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKEND:3:1+DIA_10000001'HNSHA:4:2+5499999++12345''HNHBS:5:1+3'",
]
`;

exports[`standingOrders 1`] = `Array []`;

exports[`standingOrders 2`] = `
Array [
  "HNHBK:1:3+000000000352+300+0+1'HNVSK:998:3+PIN:1+998+1+1::0+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@194@HNSHK:2:4+PIN:1+999+5499999+1+1+1::0+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKIDN:3:2+280:12345678+test1+0+1'HKVVB:4:3+0+0+0+fints+0.1'HKSYN:5:3+0'HNSHA:6:2+5499999++12345''HNHBS:7:1+1'",
  "HNHBK:1:3+000000000369+300+DIA_10000000+2'HNVSK:998:3+PIN:2+998+1+1::DDDA10000000000000000000000A+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@173@HNSHK:2:4+PIN:2+942+5499999+1+1+1::DDDA10000000000000000000000A+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKEND:3:1+DIA_10000000'HNSHA:4:2+5499999++12345''HNHBS:5:1+2'",
  "HNHBK:1:3+000000000340+300+0+1'HNVSK:998:3+PIN:2+998+1+1::0+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@182@HNSHK:2:4+PIN:2+942+5499999+1+1+1::0+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKIDN:3:2+280:12345678+test1+0+1'HKVVB:4:3+0+0+0+fints+0.1'HNSHA:5:2+5499999++12345''HNHBS:6:1+1'",
  "HNHBK:1:3+000000000395+300+DIA_10000001+2'HNVSK:998:3+PIN:2+998+1+1::DDDA10000000000000000000000A+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@199@HNSHK:2:4+PIN:2+942+5499999+1+1+1::DDDA10000000000000000000000A+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKCDB:3:1+DE27100777770209299700:DEUTDEFF500++++'HNSHA:4:2+5499999++12345''HNHBS:5:1+2'",
  "HNHBK:1:3+000000000369+300+DIA_10000001+3'HNVSK:998:3+PIN:2+998+1+1::DDDA10000000000000000000000A+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@173@HNSHK:2:4+PIN:2+942+5499999+1+1+1::DDDA10000000000000000000000A+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKEND:3:1+DIA_10000001'HNSHA:4:2+5499999++12345''HNHBS:5:1+3'",
]
`;

exports[`statements 1`] = `
Array [
  Object {
    "accountId": "12345678/0000000001",
    "closingBalance": Object {
      "currency": "EUR",
      "date": "2015-01-01",
      "isCredit": true,
      "value": 1223.57,
    },
    "number": "0",
    "openingBalance": Object {
      "currency": "EUR",
      "date": "2015-01-01",
      "isCredit": true,
      "value": 1041.23,
    },
    "referenceNumber": "STARTUMS",
    "transactions": Array [
      Object {
        "amount": 182.34,
        "bankReference": "",
        "code": "NMSC",
        "currency": "EUR",
        "customerReference": "",
        "description": "051?00UEBERWEISG?10931?20Ihre Kontonummer 0000001234?21/Test Ueberweisung 1?22n WS EREF: 1100011011 IBAN:?23 DE1100000100000001234 BIC?24: GENODE11 ?1011010100?31?32Bank",
        "descriptionStructured": Object {
          "bic": undefined,
          "iban": "",
          "name": "Bank",
          "primaNota": "11010100",
          "reference": Object {
            "raw": "Ihre Kontonummer 0000001234/Test Ueberweisung 1n WS EREF: 1100011011 IBAN: DE1100000100000001234 BIC: GENODE11 ",
          },
          "text": "UEBERWEISG",
        },
        "entryDate": "",
        "fundsCode": "",
        "id": "d9c7f240343c7e5951babcd798b4e5e7",
        "isCredit": true,
        "isExpense": true,
        "valueDate": "2015-01-01",
      },
    ],
  },
  Object {
    "accountId": "12345678/0000000001",
    "closingBalance": Object {
      "currency": "EUR",
      "date": "2015-01-01",
      "isCredit": true,
      "value": 1423.6,
    },
    "number": "0",
    "openingBalance": Object {
      "currency": "EUR",
      "date": "2015-03-01",
      "isCredit": true,
      "value": 1223.57,
    },
    "referenceNumber": "STARTUMS",
    "transactions": Array [
      Object {
        "amount": 100.03,
        "bankReference": "",
        "code": "NMSC",
        "currency": "EUR",
        "customerReference": "",
        "description": "051?00UEBERWEISG?10931?20Ihre Kontonummer 0000001234?21/Test Ueberweisung 2?22n WS EREF: 1100011011 IBAN:?23 DE1100000100000001234 BIC?24: GENODE11 ?1011010100?31?32Bank",
        "descriptionStructured": Object {
          "bic": undefined,
          "iban": "",
          "name": "Bank",
          "primaNota": "11010100",
          "reference": Object {
            "raw": "Ihre Kontonummer 0000001234/Test Ueberweisung 2n WS EREF: 1100011011 IBAN: DE1100000100000001234 BIC: GENODE11 ",
          },
          "text": "UEBERWEISG",
        },
        "entryDate": "",
        "fundsCode": "",
        "id": "d7c233aba577561f87ce2be780ef10ec",
        "isCredit": true,
        "isExpense": true,
        "valueDate": "2015-03-01",
      },
      Object {
        "amount": 100,
        "bankReference": "",
        "code": "NMSC",
        "currency": "EUR",
        "customerReference": "",
        "description": "051?00UEBERWEISG?10931?20Ihre Kontonummer 0000001234?21/Test Ueberweisung 3?22n WS EREF: 1100011011 IBAN:?23 DE1100000100000001234 BIC?24: GENODE11 ?1011010100?31?32Bank",
        "descriptionStructured": Object {
          "bic": undefined,
          "iban": "",
          "name": "Bank",
          "primaNota": "11010100",
          "reference": Object {
            "raw": "Ihre Kontonummer 0000001234/Test Ueberweisung 3n WS EREF: 1100011011 IBAN: DE1100000100000001234 BIC: GENODE11 ",
          },
          "text": "UEBERWEISG",
        },
        "entryDate": "",
        "fundsCode": "",
        "id": "908ed8c5837b54fb406ea4f1137a6629",
        "isCredit": true,
        "isExpense": true,
        "valueDate": "2015-03-01",
      },
    ],
  },
]
`;

exports[`statements 2`] = `
Array [
  "HNHBK:1:3+000000000352+300+0+1'HNVSK:998:3+PIN:1+998+1+1::0+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@194@HNSHK:2:4+PIN:1+999+5499999+1+1+1::0+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKIDN:3:2+280:12345678+test1+0+1'HKVVB:4:3+0+0+0+fints+0.1'HKSYN:5:3+0'HNSHA:6:2+5499999++12345''HNHBS:7:1+1'",
  "HNHBK:1:3+000000000369+300+DIA_10000006+2'HNVSK:998:3+PIN:2+998+1+1::DDDA10000000000000000000000A+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@173@HNSHK:2:4+PIN:2+942+5499999+1+1+1::DDDA10000000000000000000000A+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKEND:3:1+DIA_10000006'HNSHA:4:2+5499999++12345''HNHBS:5:1+2'",
  "HNHBK:1:3+000000000340+300+0+1'HNVSK:998:3+PIN:2+998+1+1::0+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@182@HNSHK:2:4+PIN:2+942+5499999+1+1+1::0+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKIDN:3:2+280:12345678+test1+0+1'HKVVB:4:3+0+0+0+fints+0.1'HNSHA:5:2+5499999++12345''HNHBS:6:1+1'",
  "HNHBK:1:3+000000000423+300+DIA_10000007+2'HNVSK:998:3+PIN:2+998+1+1::DDDA10000000000000000000000A+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@227@HNSHK:2:4+PIN:2+942+5499999+1+1+1::DDDA10000000000000000000000A+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKKAZ:3:7+DE111234567800000002:GENODE00TES:2::280:12345678+N+120100+121000++'HNSHA:4:2+5499999++12345''HNHBS:5:1+2'",
  "HNHBK:1:3+000000000369+300+DIA_10000007+3'HNVSK:998:3+PIN:2+998+1+1::DDDA10000000000000000000000A+1:20180101:120000+2:2:13:@8@00000000:5:1+280:12345678:test1:S:0:0+0'HNVSD:999:1+@173@HNSHK:2:4+PIN:2+942+5499999+1+1+1::DDDA10000000000000000000000A+1+1:20180101:120000+1:999:1+6:10:16+280:12345678:test1:S:0:0'HKEND:3:1+DIA_10000007'HNSHA:4:2+5499999++12345''HNHBS:5:1+3'",
]
`;
